[package]
name = "hpo"
version = "0.4.2"
edition = "2021"
authors = ["Jonas Marcello <jonas.marcello@esbme.com>"]
description = "Human Phenotype Ontology Similarity"
readme = "README.md"
homepage = "https://github.com/anergictcell/hpo"
repository = "https://github.com/anergictcell/hpo"
license = "MIT"
keywords = ["hpo", "phenomics", "ontology", "omim", "similarity"]
categories = ["science", "data-structures", "parser-implementations"]


[dependencies]
thiserror = "1.0.37"
log = "0.4"
aquamarine = "0.1" # used in Docs
statrs = "0.16.0"

[dev-dependencies]
rayon = "1.6.0"
simple_logger = "4.0.0"
