[package]
name = "hpo"
version = "0.11.1"
edition = "2021"
authors = ["Jonas Marcello <jonas.marcello@esbme.com>"]
description = "Human Phenotype Ontology Similarity"
readme = "README.md"
homepage = "https://github.com/anergictcell/hpo"
repository = "https://github.com/anergictcell/hpo"
license = "MIT"
keywords = ["hpo", "phenomics", "ontology", "omim", "similarity"]
categories = ["science", "data-structures", "parser-implementations"]


[dependencies]
thiserror = "2"
tracing = "0.1"
smallvec = "1"

[dev-dependencies]
rayon = "1.6.0"
simple_logger = "4.0.0"
criterion = "0.4"

[[bench]]
name = "similarity"
harness = false

[[bench]]
name = "ontology"
harness = false

[[bench]]
name = "ancestors"
harness = false

[profile.release]
lto = true
